2007-02-08  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/auxiliaryFunctions/sign :
	Signe of a float or double.
	* src/auxiliaryFunctions/sign/sign.h :
	Interface
	* src/auxiliaryFunctions/sign/{sd}signs.c :
	Implementation : s(float) d(double)

2007-02-07  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/auxiliaryFunctions :
	Some misc Functions used in many cases.

2007-02-06  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/cosh/zcoshs.c
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/cosh/ccoshs.c
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/cosh/zsins.c
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/cosh/csins.c
	Fixed with C99 Complex but Scilab computation.

2007-02-05  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/type :
	Add C99 compatibility. Float implementation.
	* src/elementaryFunctions/cos/zcoss.c
	Fixed with C99 Complex but Scilab computation.
	* src/elementaryFunctions/cos/ccoss.c
	Fixed with C99 Complex but Scilab computation.

2007-02-02  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/type :
	Add C99 compatibility. Double implementation.

2007-01-31  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/*.c :
	Remove Multi Complex definition.
	* src/type/doubleComplex.h :
	Used as C99 Complex interface or hand-made complex.
	* src/type/floatComplex.h :
	Used as C99 Complex interface or hand-made complex.
	* src/*/Makefile :
	Add -std=c99 flag for native c99 complex compilation.
	* src/elementaryFunctions/exp :
	Exponential functions.
	* src/test/testExp.c :
	Add some Exponential functions tests.

2007-01-29  Bruno JOFRET  <bruno.jofret@inria.fr>

	* src/elementaryFunctions/tan :
	Tangeant functions.
	* src/elementaryFunctions/tanh :
	Hyperbolic Tangeant functions.
	* src/test/testCosh.c :
	Add some Hyperbolic Cosine tests.
	* src/test/tesSinh.c :
	Add some Hyperbolic Sine tests.
	* src/test/testTan.c :
	Add some Tangeant tests.